--- a/.github/workflows/cicd-trivy-container-scan.yml
+++ b/.github/workflows/cicd-trivy-container-scan.yml
@@ -28,6 +28,7 @@ jobs:
         uses: aquasecurity/trivy-action@915b19bbe73b92a6cf82a1bc12b087c9a19a5fe2 #v0.28.0
         with:
           image-ref: "localbuild/testimage:latest"
+          ignore-unfixed: true
           format: "sarif"
           output: "results.sarif"
         env:
